# poc_II_tfg_multimodal_rag_chatbot

./: .gitignore  README.md  pyproject.toml
data/: 2.txt  5.txt
datasets_chatbot/descriptions/: 1.txt  14.txt  2.txt  3.txt  4.txt  5.txt
docs/diagrams/: PoC_II_Sequence_Diagram.mmd
notebooks/: gradio_multimodal_chatbot.ipynb  multimodal_embedding.ipynb  multimodal_rag_langchain.ipynb  multimodal_rag_llamaindex.ipynb  notebook_00_Activar_GPU.ipynb  notebook_01_LlaVA_1_6_Multimodal_LLM.ipynb  notebook_02_CLIP_Multimodal_Embedding.ipynb  notebook_03_chromadb_vector_store.ipynb  notebook_04_Chroma_Multimodal_Vector_Store.ipynb  notebook_05_Llama_3_2_Vision_Multimodal_LLM.ipynb  notebook_06_LlamaIndex_Multmodal_Rag.ipynb  poc_multimodal_rag_chatbot.ipynb  semantic_search.ipynb
src/poc_multimod_chatbot_chroma/: main.py  semantic_search.py
vectorstore/: chroma.sqlite3
